# qtr-fingerprint

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  RDKIT_BUILD.md  README.md  build_docker.sh
app/: CMakeLists.txt  CompleteSearchEngineProfiler.cpp  CompleteSearchEngineProfiler.h  MockSearchEngine.h  SearchEngineProfiler.cpp  SearchEngineProfiler.h  main.cpp
cpp/: CMakeLists.txt
cpp/analyze_smiles_for_huffman/: CMakeLists.txt  main.cpp
cpp/app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
cpp/ball_tree/: CMakeLists.txt  main.cpp
cpp/build_db/: Args.h  BuildArgs.h  CMakeLists.txt  buildBingoNoSQL.cpp  buildBingoNoSQL.h  buildQtr.cpp  buildQtr.h  main.cpp
cpp/build_db/build_types/: buildBingoNoSQL.cpp  buildBingoNoSQL.h  buildQtr.cpp  buildQtr.h
cpp/build_db/database_builders/: BingoNoSQLDatabaseBuilder.h  DatabaseBuilderFactory.cpp
cpp/build_db/qtr_build/: BuildArgs.cpp  BuildArgs.h  CMakeLists.txt
cpp/cmake/: AddRDKit.cmake  SetOutputDirectory.cmake
cpp/core/: CMakeLists.txt
cpp/core/benchmarking/: BenchmarkRunner.h  TimingManager.h
cpp/core/dataset/: CachedDataset.h  SmilesStorage.h
cpp/core/frameworks/: HybridFramework.h  IndigoCppFramework.h  IndigoFramework.cpp  IndigoFramework.h  IndigoQueryFingerprint.h  RDKitFramework.h
cpp/core/io/: CSVWriter.cpp  SmilesDirParser.h
cpp/core/stats/: BallTreeNodesStat.h  StatEntry.h  StatRow.h  StatTable.cpp
cpp/core/utils/: Bitset.h
cpp/data/: pubchem_100_queries.txt
cpp/db_console_queries/: CMakeLists.txt  main.cpp
cpp/experiment/: BallTree.h  CMakeLists.txt  ExperimentArgs.cpp  ExperimentArgs.h  ExperimentStat.cpp  ExperimentStat.h  GlobalIndigoSession.h  Trie.h  main.cpp
cpp/experiment/SearchEngines/: RDKitSearchEngine.cpp  RDKitSearchEngine.h  SearchEngine.h  SearchEngineFactory.cpp  SearchEngineFactory.h
cpp/experiment/benchmarking/: BenchmarkRunner.h  TimingManager.cpp  TimingManager.h
cpp/experiment/dataset/: CachedDataset.h  DatasetInterface.h
cpp/experiment/fingerprints/: FingerprintConcept.h  IndigoFingerprint.cpp  IndigoFingerprint.h  QueryFingerprint.h  RDKitFingerprint.cpp  RDKitFingerprint.h
cpp/experiment/frameworks/: FrameworkInterface.h  HybridFramework.cpp  HybridFramework.h  IndigoCppFramework.cpp  IndigoCppFramework.h  IndigoFramework.cpp  IndigoFramework.h  IndigoQueryFingerprint.cpp  IndigoQueryFingerprint.h  RDKitFramework.cpp  RDKitFramework.h
cpp/experiment/io/: CSVTable.cpp  CSVTable.h  CSVWriter.cpp  CSVWriter.h  QueriesParser.cpp  QueriesParser.h  SmilesCSVParser.cpp  SmilesCSVParser.h  SmilesDirParser.cpp
cpp/experiment/parsers/: QueriesParser.cpp  QueriesParser.h  SmilesCSVParser.cpp  SmilesCSVParser.h  SmilesDirParser.cpp  SmilesDirParser.h
cpp/experiment/qtr_bingo/: QtrBingoNoSQL.cpp  QtrBingoNoSQL.h  qtr-bingo-nosql.cpp  qtr-bingo-nosql.h
cpp/experiment/search_engines/: BallTreeSearchEngine.h  BingoSearchEngine.cpp  BingoSearchEngine.h  IndigoBruteForceSearchEngine.h  IndigoSearchEngine.h  IndigoUtils.h  QtrRDKitSearchEngine.cpp  QtrRDKitSearchEngine.h  QtrSearchEngine.h  RDKitSearchEngine.cpp  RDKitSearchEngine.h  SearchEngine.h  SearchEngineConcept.h  SearchEngineFactory.cpp  SearchEngineFactory.h  TrieSearchEngine.h
cpp/experiment/stats/: BallTreeNodesStat.h  BallTreeQueryStat.h  StatTable.h
cpp/experiment/utils/: Config.h  Profiling.cpp  Profiling.h
cpp/fingerprints/: CMakeLists.txt  main.cpp
cpp/lib/: CMakeLists.txt
cpp/lib/profiler/: CMakeLists.txt  SearchEngineProfiler.h
cpp/lib/search_engine/: BingoSearchEngine.h  CMakeLists.txt  MockSearchEngine.h
cpp/lib/utils/: CMakeLists.txt  qtr-utils.cpp
cpp/parse_csv/: CMakeLists.txt  main.cpp
cpp/parse_sdf/: CMakeLists.txt  main.cpp
cpp/playground/: CMakeLists.txt  main.cpp
cpp/preprocessing/: CMakeLists.txt  PreprocessingArgs.h  main.cpp
cpp/preprocessing/preprocessors/: CSVPreprocessor.cpp  PreprocessingType.h  Preprocessor.h  PreprocessorFactory.h  SDFPreprocessor.cpp
cpp/preprocessing/qtr_preprocessing/: CMakeLists.txt  PreprocessingArgs.cpp  PreprocessingArgs.h
cpp/qtrlib/: CMakeLists.txt
cpp/qtrlib/answer_filtering/: AlwaysTrueFilter.h  AnswerFilter.h  CompoundFilter.cpp  CompoundFilter.h  IndigoCFRamFilter.cpp  IndigoCFRamFilter.h  IndigoDriveFilter.cpp  IndigoDriveFilter.h  IndigoFilter.cpp  IndigoFilter.h  IndigoRamFilter.cpp  IndigoRamFilter.h  IndigoRamMoleculeFilter.cpp  IndigoRamMoleculeFilter.h  IndigoRamSmilesFilter.cpp  IndigoRamSmilesFilter.h  IndigoSmilesDriveFilter.cpp  IndigoSmilesDriveFilter.h  IndigoSmilesFilter.cpp  IndigoSmilesFilter.h  IndigoSmilesRamFilter.cpp  IndigoSmilesRamFilter.h  PropertiesDriveFilter.cpp  PropertiesDriveFilter.h  PropertiesFilter.cpp  PropertiesFilter.h  PropertiesRamFilter.cpp  PropertiesRamFilter.h  QtrBallTreeLeafInitMixin.h  RDKitSubstructFilter.cpp  RDKitSubstructFilter.h
cpp/qtrlib/ball_tree/: BallTree.cpp  BallTree.h  BallTreeBuilder.cpp  BallTreeBuilder.h  BallTreeDriveSearchEngine.cpp  BallTreeDriveSearchEngine.h  BallTreeNoChecksSearchEngine.cpp  BallTreeNoChecksSearchEngine.h  BallTreeQueryData.cpp  BallTreeQueryData.h  BallTreeRAMSearchEngine.cpp  BallTreeRAMSearchEngine.h  BallTreeSearchEngine.cpp  BallTreeSearchEngine.h  BallTreeTypes.h
cpp/run_db/: Args.h  CMakeLists.txt  RunDbUtils.cpp  RunDbUtils.h  RunQtr.cpp  RunQtr.h  main.cpp
cpp/service/: CMakeLists.txt  ServiceManager.h  WebService.h  main.cpp
cpp/splitter_tree/: CMakeLists.txt  main.cpp
cpp/tests/: BingoSearchEngineTests.cpp  CMakeLists.txt  ColumnsIOTests.cpp  Common.cpp  Common.h  DecisionTreeEngineTests.cpp  DecisionTreeTests.cpp  ExhaustiveSearchEngineTests.cpp  FingerprintTableTest.cpp  FingerprintTableTests.cpp  FingerprintTests.cpp  RawBucketIOTests.cpp  SearchEngineTests.cpp  SearchEngineTests.h  SlowSearchEngineTests.cpp  SplitterTreeTests.cpp  TableViewTests.cpp  UtilsTests.cpp  common.cpp  common.h  main.cpp
engine-on-bingo-nosql/: CMakeLists.txt  main.cpp
profiler/: CMakeLists.txt  CompleteSearchEngineProfiler.cpp  CompleteSearchEngineProfiler.h  SearchEngineProfiler.cpp  SearchEngineProfiler.h
(+502 files in other folders)
